--- a/website/blah/src/App.css
+++ b/website/blah/src/App.css
@@ -1,16 +1,38 @@
+.float{
+display: flex;
+align-items: center;
+justify-content: space-between;
+height: 100vh;
+}
 .pill-pattern{
-  height: 100%;
-  width: 20%;
+  width: 2px;
+  overflow: visible;
+ 
+}
+.right{
+  transform: rotateY(180deg);
+}
+.flip{
+  transform: rotateX(180deg);
+}
+.pill-row{
+ display: inline-flex;
 }
 .pill{
   height:2em;
   border-radius:20px;
-  margin: 1em;
-  /* float:left; */
+  margin: 0.5em;
   background-color: #ec6463;
 }
-.pill:nth-child(2n+1){
+.pill:hover{
+  background-color: yellow;
+}
+.pill:nth-child(2n+2){
   background-color: #e53889;
+}
+.empty{
+  background-color:transparent;
+  width: 7em;
 }
 .one{
   width:5em;
