--- a/website/blah/src/App.css
+++ b/website/blah/src/App.css
@@ -1,51 +1,6 @@
-.float{
-display: flex;
-align-items: center;
-justify-content: space-between;
-height: 100vh;
-}
-.pill-pattern{
-  width: 2px;
-  overflow: visible;
- 
-}
-.right{
-  transform: rotateY(180deg);
-}
-.flip{
-  transform: rotateX(180deg);
-}
-.pill-row{
- display: inline-flex;
-}
-.pill{
-  height:2em;
-  border-radius:20px;
-  margin: 0.5em;
-  background-color: #ec6463;
-}
-.pill:hover{
-  background-color: yellow;
-}
-.pill:nth-child(2n+2){
-  background-color: #e53889;
-}
-.empty{
-  background-color:transparent;
-  width: 7em;
-}
-.one{
-  width:5em;
-}
-.two{
-  width:10em;
-}
-.three{
-  width:8em;
-}
-.four{
-  width:3em;
-}
-.five{
-  width:15em;
-}
+@import "./css/nav.css";
+@import "./css/home.css";
+@import "./css/about.css";
+@import "./css/game.css";
+@import "./css/test.css";
+@import "./css/footer.css"
