--- a/website/blah/src/index.css
+++ b/website/blah/src/index.css
@@ -1,53 +1,40 @@
+@import url('https://fonts.googleapis.com/css?family=Nova+Mono&display=swap');
 
-
+*{
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+}
+*:before,
+*:after {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
+  padding-bottom:60px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color:rgba(38,38,62);
-  height: 95vh;
+  height: fit-content;
+ overflow:scroll;
 }
-
+.nothome{
+  padding: 30px;
+}
+.content{
+  height: fit-content;
+  overflow: scroll;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-h1,p{
-  color:rgba(128,128,128);
+nav{
+  width: 100%;
 }
-.logo{
-  color:rgba(111,252,233);
-}
-.center{
-text-align:center;
-shape-outside: circle(50%);
-position: absolute;
-    right: 0;
-    left: 0;
-    top: 20%;
-width: fit-content;
-margin: 0 auto;
-z-index: 1;
-}
-.logo:before{
-  content:"\003c";
-  color: rgba(242,210,131);
-}
-.logo:after{
- content:"/\003e";
- color: rgba(242,210,131);
-}
-#divider:before{
-content:"";
-border-bottom: 5px solid rgba(128,128,128);
-width: 25px;
-display: block;
-margin:0 auto;
-}
-
 
 @media(max-width: 768px) { 
 .home{
