--- a/game/WDSprotosite/style.css
+++ b/game/WDSprotosite/style.css
@@ -18,6 +18,7 @@ nav{
 
     position: static;
     margin: 0;
+    padding: 16px;;
 }
 
 nav a{
@@ -32,8 +33,12 @@ nav ul{
 .navLink li{
     display: inline;    
     font-size: 24px;
-
+   
     padding: 8px;
+}
+
+.navLink li:hover{
+    text-decoration: underline;
 }
 
 
@@ -118,7 +123,36 @@ footer{
 
 /* ABOUT PAGE */
 .about{
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-evenly;
+   display: inline;
+
+   position: absolute;
+   top:150px;
+}
+
+.avatar{
+    display: block;
+    margin:0;
+    width: 15%;
+    
+    position: relative;
+    left: 256px;
+    top:-24px;
+
+    border-radius: 50%;
+    border:6px #ec6463 solid;
+    float: left;
+}
+
+.aboutText{
+    display: block;
+    margin: auto;
+    width: 60%;
+
+    background:#808080;
+    border:6px #ec6463 solid;
+    border-radius: 10px;
+}
+
+.aboutText p{
+    font-size: 16px;
 }
