--- a/game/WDSprotosite/style.css
+++ b/game/WDSprotosite/style.css
@@ -18,7 +18,7 @@ nav{
 
     position: static;
     margin: 0;
-    padding: 16px;;
+    padding: 16px;
 }
 
 nav a{
@@ -120,6 +120,8 @@ footer{
 
     font-size: 16px;
 }
+
+
 
 /* ABOUT PAGE */
 .about{
