--- a/website/blah/src/App.css
+++ b/website/blah/src/App.css
@@ -3,4 +3,6 @@
 @import "./css/about.css";
 @import "./css/game.css";
 @import "./css/test.css";
-@import "./css/footer.css"
+@import "./css/footer.css";
+@import "./css/contact.css";
+@import "./css/cookies.css";
