--- a/website/blah/src/css/footer.css
+++ b/website/blah/src/css/footer.css
@@ -1,17 +1,17 @@
-.footer{
+footer{
     width: 100%;
     position: absolute;
-    bottom:0;
     left:0;
     right:0;
     background-color: black;
-    line-height: 50px;
+    padding: 30px 0;
+    margin-top:20px;
 }
-.footer a{
+footer a{
     margin: 30px;
     color: #6ffce9;
     text-transform: uppercase;
 }
-.footer a:hover{
+footer a:hover, footer a:focus{
     color:#f2d283;
 }
