--- a/website/blah/src/index.css
+++ b/website/blah/src/index.css
@@ -2,7 +2,6 @@
 
 *{
   text-decoration: none;
-  list-style: none;
   box-sizing: border-box;
 }
 *:before,
@@ -11,22 +10,20 @@
 }
 body {
   margin: 0;
-  padding-bottom:60px;
+  padding:0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color:rgba(38,38,62);
-  height: fit-content;
- overflow:scroll;
 }
 .nothome{
   padding: 30px;
+  padding-bottom:60px;
 }
 .content{
   height: fit-content;
-  overflow: scroll;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -35,7 +32,12 @@ code {
 nav{
   width: 100%;
 }
-
+h1,h2{
+  color:rgba(128,128,128);
+}
+p{
+  color:white;
+}
 @media(max-width: 768px) { 
 .home{
   height: 95vh;
