--- a/website/blah/src/App.css
+++ b/website/blah/src/App.css
@@ -2,7 +2,7 @@
 @import "./css/home.css";
 @import "./css/about.css";
 @import "./css/game.css";
-@import "./css/test.css";
+@import "./css/animation.css";
 @import "./css/footer.css";
 @import "./css/contact.css";
 @import "./css/cookies.css";
