--- a/website/blah/src/App.css
+++ b/website/blah/src/App.css
@@ -2,6 +2,7 @@
 @import "./css/home.css";
 @import "./css/about.css";
 @import "./css/game.css";
+@import "./css/comments.css";
 @import "./css/animation.css";
 @import "./css/footer.css";
 @import "./css/contact.css";
