--- a/website/blah/src/css/game.css
+++ b/website/blah/src/css/game.css
@@ -3,7 +3,7 @@
     flex-flow: row-reverse wrap;
 }
 .game-frame{
-    height: 60vh;
+    /* height: 80vh; */
     width: 90%;
     border: 2px solid #f2d283;
     margin:20px 0;
